Wanna test pt and em size on mobile

--- a/index.html
+++ b/index.html
@@ -51,19 +51,19 @@
 	font-style: italic;
 }
 
-@media (min-width: 1000px){
+@media (min-width: 899em){
 	#wrap {
-		width: 1010px;
+		width: 915em;
 	}
 	#wrap2 {
-		width: 1010px;
+		width: 915em;
 	}
 	body{
 		/*background-image: url(.jpg);*/
 		background-color:lightblue;
     }
     a{
-        font-size: 26px;
+        font-size: 26pt;
     }
 	.hat{
 	    background-size: 15%;
@@ -72,7 +72,7 @@
 	    margin-left: 40%;
     }
 }
-@media (max-width: 1000px)and(min-width: 600px){
+@media (max-width: 898em)and(min-width: 46em){
 	body{
 		background-color: lightgreen;
 	}
@@ -80,27 +80,29 @@
 	    background-size: 15%;
     }
     a{
-        font-size: 26px;
+        font-size: 26pt;
     }
    .horizontal{
 	    margin-left: 30%;
     }
 }
-@media (max-width: 599px){
+@media (max-width: 45.5em){
 	body{
 	    background: #3c8dda;
 	}
 	a{
-        font-size: 16px;
+        font-size: 16pt;
     }
 	.notimp{
 		display: none;
 	}
 	.large{
-		height: 280px;
+		height: 15%;
 	}
 	#m1 {
-		width: 80px;
+		width: 90%;
+		margin-left: 15%;
+		
 	}
 	.hat{
 		background-size: contain;
