One more try with mobile

--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Hello Camera</title>
     <script src="https://unpkg.com/dynamsoft-camera-enhancer@2.1.0/dist/dce.js"></script>
 </head>
+<script>
+
+</script>
 <style>
+	
 .line {
 	height: 10px;
 	width: 100%;
@@ -51,7 +55,7 @@
 	font-style: italic;
 }
 
-@media (min-width: 899em){
+@media (min-width: 89.5em){
 	#wrap {
 		width: 915em;
 	}
@@ -72,7 +76,7 @@
 	    margin-left: 40%;
     }
 }
-@media (max-width: 898em)and(min-width: 46em){
+@media (max-width: 89em)and(min-width: 4.6em){
 	body{
 		background-color: lightgreen;
 	}
@@ -86,7 +90,7 @@
 	    margin-left: 30%;
     }
 }
-@media (max-width: 45.5em){
+@media (max-width: 4.5em){
 	body{
 	    background: #3c8dda;
 	}
