--- a/index.html
+++ b/index.html
@@ -115,7 +115,28 @@
 	margin-left: 0%;
     }
 }
+@media (orientation: landscape) {
+  body {
+    flex-direction: row;
+  }
+}
 
+@media (orientation: portrait) {
+  body {
+    flex-direction: column;
+  
+		background-color: lightgreen;
+	}
+	.hat{
+	    background-size: 15%;
+    }
+    a{
+        font-size: 26pt;
+    }
+   .horizontal{
+	    margin-left: 30%;
+    }
+}
 .hat{
 	height:20%;	
 	width:100%;
