Change of size for portrait

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 </script>
 <style>
-	
+em{
+	font-size: 120%; font-family: monospace; color:#580957;
+}
 .line {
 	height: 10px;
 	width: 100%;
@@ -125,7 +127,7 @@
   body {
     flex-direction: column;
   
-		background-color: lightgreen;
+		background-color: rgb(238, 144, 183);
 	}
 	.hat{
 	    background-size: 15%;
@@ -135,6 +137,20 @@
     }
    .horizontal{
 	    margin-left: 30%;
+    }
+	em{
+	font-size: 620%;
+    }
+	.textblock{
+		flex-direction: row; 
+		width: 100%;
+		height: 25%;
+	}
+	strong{
+		font-size: large;
+	}
+	a, p{
+        font-size: large;
     }
 }
 .hat{
@@ -226,7 +242,7 @@
 				<div id="header_top" class="textblock">
 					<a href="#" class="smp">AAAAAAAA</a>
 					<strong>skills</strong><p> skills/...</p>
-					<em style="font-size: 120%; font-family: monospace; color:#580957">Description</em>
+					<em >Description</em>
 				</div>
 											
 			</div>
