Try again size portrait

--- a/index.html
+++ b/index.html
@@ -127,36 +127,35 @@ em{
   body {
     flex-direction: column;
   
-		background-color: rgb(238, 144, 183);
+		background-color: rgb(133, 39, 78);
 	}
 	.hat{
-	    background-size: 15%;
+	    background-size: 95%;
     }
     a{
-        font-size: 26pt;
+        font-size: 620%;
     }
    .horizontal{
 	    margin-left: 30%;
     }
 	em{
-	font-size: 620%;
+	font-size: 420%;
     }
 	.textblock{
-		flex-direction: row; 
+		flex-direction: column; 
 		width: 100%;
-		height: 25%;
+		height: 45%;
 	}
 	strong{
-		font-size: large;
+		font-size: 550%;
 	}
 	a, p{
-        font-size: large;
+        font-size: 450%;
     }
 }
 .hat{
 	height:20%;	
 	width:100%;
-	background-image: url("imgTinyartistsmodified.jpg");
 }
 .buttons div{
 	display: inline-block;
@@ -252,7 +251,7 @@ em{
 				<div id="header_top" class="textblock">
 					<a href="indexCamera.html" class="smp">AAAAAAAA</a>
 					<p>skills</p>
-					<em style="font-size: 120%; font-family: monospace; color:#580957">Description</em>
+					<em >Description</em>
 				</div>
 											
 			</div>
